resources/assets/css/style.css
/* ... */
/* Phone field */

[data-bs-theme=dark] .iti .iti__flag-container,
[data-bs-theme=dark] .iti .iti__selected-flag {
    background-color: var(--tblr-bg-surface-secondary) !important;
}

[data-bs-theme=dark] .iti .iti__selected-dial-code {
    color: var(--tblr-muted) !important;
}

[data-bs-theme=dark] .iti .iti__country-list {
    background-color: var(--tblr-dark) !important;
}

[data-bs-theme=dark] .iti .iti__country-name {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .iti .iti__active,
[data-bs-theme=dark] .iti .iti__highlight {
    background-color: var(--tblr-primary) !important;
    color: #fff;
}

/* Icon Picker */

[data-bs-theme=dark] .iconpicker {
    background-color: transparent;
    border-color: var(--tblr-primary);
    color: var(--tblr-primary);
}

[data-bs-theme=dark] .table-icons td,
[data-bs-theme=dark] .table-icons .btn-icon {
    max-width: 35px !important;
    max-height: 30px !important;
}

[data-bs-theme=dark] .table-icons .btn-warning {
    background-color: var(--tblr-primary) !important;
}

/* Fix border btn-file */
.btn-file {
    border-top-right-radius: var(--tblr-border-radius-sm) !important;
    border-bottom-right-radius: var(--tblr-border-radius-sm) !important;
    border-radius: var(--tblr-border-radius-sm) !important;
}

/* Fix modal cancel color */
[data-bs-theme=dark] .swal-button--cancel {
    color: #fff !important;
}

/* Fix export */
[data-bs-theme=dark] .dt-button-collection .dropdown-menu {
    background-color: var(--tblr-dark) !important;
}

[data-bs-theme=dark] .dt-button-collection .dropdown-menu .dropdown-item:hover {
    background-color: var(--tblr-primary) !important;
    color: #fff;
}

/* Fix visilibity */
[data-bs-theme=dark] .dt-button-collection {
    background-color: var(--tblr-dark) !important;
}

[data-bs-theme=dark] .buttons-colvis .dropdown-menu .dropdown-item:hover {
    background-color: var(--tblr-primary) !important;
    color: #fff;
}

[data-bs-theme=dark] .dt-button-collection {
    background-color: var(--tblr-dark) !important;
}

/* Modal Inline Creation */

[data-bs-theme=dark] .bg-light {
    background-color: var(--tblr-bg-surface) !important;
}

/* Fix floating header */

[data-bs-theme=dark] table.fixedHeader-floating {
    background-color: var(--tblr-bg-surface);
}

/* TinyMCE */

[data-bs-theme=dark] .tox,
[data-bs-theme=dark] .tox .tox-editor-container,
[data-bs-theme=dark] .tox .tox-editor-header,
[data-bs-theme=dark] .tox .tox-menubar,
[data-bs-theme=dark] .tox .tox-toolbar__primary,
[data-bs-theme=dark] .tox .tox-edit-area html {
    background-color: var(--tblr-bg-surface) !important;
}

[data-bs-theme=dark] .tox-tinymce {
    border-color: var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .tox .tox-menubar+.tox-toolbar-overlord {
    border-color: var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .tox .tox-statusbar,
[data-bs-theme=dark] .tox .tox-promotion,
[data-bs-theme=dark] .tox .tox-toolbar-overlord,
[data-bs-theme=dark] .tox .tox-tbtn--bespoke,
[data-bs-theme=dark] .tox .tox-promotion-link {
    background-color: transparent !important;
}

[data-bs-theme=dark] .tox .tox-mbtn,
[data-bs-theme=dark] .tox .tox-tbtn {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .tox .tox-statusbar__branding svg,
[data-bs-theme=dark] .tox .tox-icon svg,
[data-bs-theme=dark] .tox .tox-tbtn__select-chevron svg {
    fill: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .tox button:hover,
[data-bs-theme=dark] .tox button.tox-mbtn--active,
[data-bs-theme=dark] .tox button.tox-tbtn--enabled {
    background: var(--tblr-tabler) !important;
}

